Ajouter le script qui gère la mémoire cache et relier les slides du carrousel.

--- a/projects/index.html
+++ b/projects/index.html
@@ -24,7 +24,7 @@
     <script type="module" src="../js/Main.js" defer></script>
   </head>
 
-  <body>
+  <body id="swup" class="transition-fadein">
     <div class="site-container">
       <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
@@ -44,7 +44,7 @@
                 </li>
               </div>
               <li>
-                <a href="../contact/"
+                <a href="../contact/" data-component="Links"
                   ><img src="../svg/letter.svg" alt="Logo de contact"
                 /></a>
               </li>
@@ -59,7 +59,7 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide" id="slide1">
+          <div class="swiper-slide">
             <h2 class="project__title_kind">Animation 3D</h2>
             <h2 class="project__title">Mia dans l’autobus</h2>
             <a href="mia-dans-lautobus/" class="button__small"
@@ -72,7 +72,7 @@
               />
             </div>
           </div>
-          <div class="swiper-slide" id="slide2">
+          <div class="swiper-slide">
             <h2 class="project__title_kind">Animation multimédia</h2>
             <h2 class="project__title">Robot à Montréal</h2>
             <a href="robot-a-montreal/" class="button__small">En savoir plus</a>
@@ -83,7 +83,7 @@
               />
             </div>
           </div>
-          <div class="swiper-slide" id="slide3">
+          <div class="swiper-slide">
             <h2 class="project__title_kind">
               Mouvement québécois de la qualité
             </h2>
@@ -96,7 +96,7 @@
               />
             </div>
           </div>
-          <div class="swiper-slide" id="slide4">
+          <div class="swiper-slide">
             <h2 class="project__title_kind">Animation multimédia</h2>
             <h2 class="project__title">L’oasis</h2>
             <a href="loasis/" class="button__small">En savoir plus</a>
@@ -107,7 +107,7 @@
               />
             </div>
           </div>
-          <div class="swiper-slide" id="slide5">
+          <div class="swiper-slide">
             <h2 class="project__title_kind">Montage vidéo</h2>
             <h2 class="project__title">Lumifest</h2>
             <a href="lumifest/" class="button__small">En savoir plus</a>
