--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module" src=".../js/Main.js" defer></script>
+    <script type="module" src="../js/Main.js" defer></script>
   </head>
 
   <body>
@@ -204,15 +204,14 @@
       <section class="presentation">
         <div class="wrapper">
           <h3>Vidéo de présentation</h3>
-          <!--<iframe
+          <iframe
+            src="https://www.youtube-nocookie.com/embed/doe-TSPP8bg?vq=hd1080&rel=0&color=white"
             width="100%"
-            height="700px"
-            src="https://www.youtube-nocookie.com/embed/bibMXgY5duE"
-            title="YouTube video player"
+            height="500px"
+            title="Présentation d'Alanis Bédard"
             frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
-          ></iframe>-->
+          ></iframe>
         </div>
       </section>
 
