Ajout d'un sitemap et corrections de plusieurs petits bugs.

--- a/404.html
+++ b/404.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accueil</title>
+    <title>Page introuvable</title>
 
-    <link rel="icon" type="image/x-icon" href="svg/favicon.svg" />
+    <meta
+      name="description"
+      content="Portfolio - Alanis Bédard. Intégratrice multimédia. Cette page n'existe pas!"
+    />
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/svg/favicon.svg" />
+
+    <link rel="stylesheet" href="/css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,27 +26,27 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module" src="js/Main.js" defer></script>
+    <script type="module" src="/js/Main.js" defer></script>
   </head>
 
   <body>
     <div class="site-container">
       <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
-          <a href="" class="brand"
-            ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
+          <a href="/" class="brand">
+            <img src="/svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
           <nav>
             <ul class="nav_main">
               <div class="nav__animation">
-                <li><a href="">Accueil</a></li>
+                <li><a href="/">Accueil</a></li>
                 <li><a href="/about/">À propos</a></li>
                 <li><a href="/projects/">Projets</a></li>
               </div>
               <li>
-                <a href="/contact/"
-                  ><img src="svg/letter.svg" alt="Logo de contact"
+                <a href="/contact/">
+                  <img src="/svg/letter.svg" alt="Logo de contact"
                 /></a>
               </li>
             </ul>
@@ -68,9 +73,10 @@
               <a
                 href="https://www.linkedin.com/in/alanisbedard/"
                 target="_blank"
-                ><img
+              >
+                <img
                   class="social_icon"
-                  src="svg/social-linkedin.svg"
+                  src="/svg/social-linkedin.svg"
                   alt="Le LinkedIn d'Alanis Bédard"
               /></a>
             </li>
@@ -78,7 +84,7 @@
               <a href="https://www.behance.net/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-behance.svg"
+                  src="/svg/social-behance.svg"
                   alt="Le Behance d'Alanis Bédard"
               /></a>
             </li>
@@ -86,9 +92,10 @@
               <a
                 href="https://www.instagram.com/alanisbedard/?hl=fr"
                 target="_blank"
-                ><img
+              >
+                <img
                   class="social_icon"
-                  src="svg/social-instagram.svg"
+                  src="/svg/social-instagram.svg"
                   alt="L'Instagram d'Alanis Bédard"
               /></a>
             </li>
@@ -98,15 +105,15 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-youtube.svg"
+                  src="/svg/social-youtube.svg"
                   alt="La chaîne Youtube d'Alanis Bédard"
               /></a>
             </li>
             <li>
-              <a href="https://github.com/AlanisBedard" target="_blank"
-                ><img
+              <a href="https://github.com/AlanisBedard" target="_blank">
+                <img
                   class="social_icon"
-                  src="svg/social-github.svg"
+                  src="/svg/social-github.svg"
                   alt="Le GitHub d'Alanis Bédard"
               /></a>
             </li>
@@ -114,7 +121,7 @@
               <a href="https://sketchfab.com/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-sketchfab.svg"
+                  src="/svg/social-sketchfab.svg"
                   alt="Le Sketchfab d'Alanis Bédard"
               /></a>
             </li>
