--- a/projects/loasis/index.html
+++ b/projects/loasis/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>L’oasis</title>
 
+    <meta
+      name="description"
+      content="Portfolio - Alanis Bédard. Projet d'animation multimédia. À la poursuite de l'Oasis."
+    />
+
     <link rel="icon" type="image/x-icon" href="../../svg/favicon.svg" />
 
     <link rel="stylesheet" href="../../css/styles.css" />
@@ -53,7 +58,7 @@
         <a href="#top"></a>
       </div>
 
-      <section class="project__hero">
+      <section class="project__hero animation__project">
         <h2>Animation Multimédia</h2>
         <h1 class="project__title">L’oasis</h1>
         <div class="hero__bgi">
