--- a/projects/lumifest/index.html
+++ b/projects/lumifest/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lumifest</title>
 
+    <meta
+      name="description"
+      content="Portfolio - Alanis Bédard. Projet d'animation 2D. Dans l'oeil de la projection."
+    />
+
     <link rel="icon" type="image/x-icon" href="../../svg/favicon.svg" />
 
     <link rel="stylesheet" href="../../css/styles.css" />
@@ -53,8 +58,8 @@
         <a href="#top"></a>
       </div>
 
-      <section class="project__hero">
-        <h2>Montage vidéo</h2>
+      <section class="project__hero animation__project">
+        <h2>Animation 2D</h2>
         <h1 class="project__title">Lumifest</h1>
         <div class="hero__bgi">
           <img
