--- a/projects/mia-dans-lautobus/index.html
+++ b/projects/mia-dans-lautobus/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mia dans l'autobus</title>
 
+    <meta
+      name="description"
+      content="Portfolio - Alanis Bédard. Projet d'animation 3D. Mia le chat prend l'autobus."
+    />
+
     <link rel="icon" type="image/x-icon" href="../../svg/favicon.svg" />
 
     <link rel="stylesheet" href="../../css/styles.css" />
@@ -20,6 +25,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="module" src="../../js/Main.js" defer></script>
   </head>
@@ -53,7 +59,7 @@
         <a href="#top"></a>
       </div>
 
-      <section class="project__hero">
+      <section class="project__hero animation__project">
         <h2>Animation 3D</h2>
         <h1 class="project__title">Mia dans l’autobus</h1>
         <div class="hero__bgi">
@@ -116,9 +122,9 @@
               celle-ci. Le squelette manipule de façon organique le modèle de
               mon personnage principal, et de simples objets vides contrôlent le
               mouvement des yeux. Les pupilles et les sourcils bougent grâce à
-              des <span style="white-space: nowrap">« Shape Keys ».</span> Ce
-              fut l’une de mes premières animations 3D et j’en ai beaucoup
-              appris.
+              des
+              <span style="white-space: nowrap">« Shape Keys ».</span> Ce fut
+              l’une de mes premières animations 3D et j’en ai beaucoup appris.
             </p>
             <div class="softwares skills_softwares">
               <h3>Logiciels</h3>
