--- a/projects/salon-mpa/index.html
+++ b/projects/salon-mpa/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salon MPA</title>
 
+    <meta
+      name="description"
+      content="Portfolio - Alanis Bédard. Projet d'animation 3D pour le Mouvement québécois de la qualité. L'introduction du Salon MPA."
+    />
+
     <link rel="icon" type="image/x-icon" href="../../svg/favicon.svg" />
 
     <link rel="stylesheet" href="../../css/styles.css" />
@@ -53,7 +58,7 @@
         <a href="#top"></a>
       </div>
 
-      <section class="project__hero">
+      <section class="project__hero animation__project">
         <h2>Mouvement québécois de la qualité</h2>
         <h1 class="project__title">Salon MPA</h1>
         <div class="hero__bgi">
