--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>À propos</title>
 
+    <meta
+      name="description"
+      content="Portfolio - Alanis Bédard. Intégratrice multimédia. De la programmation web au design, je suis
+    heureuse de prêter main forte!"
+    />
+
     <link rel="icon" type="image/x-icon" href="../svg/favicon.svg" />
 
     <link rel="stylesheet" href="../css/styles.css" />
