--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
 
+    <meta
+      name="description"
+      content="Portfolio - Alanis Bédard. Intégratrice multimédia. Voulez-vous discuter? Écrivez-moi un message via le formulaire de
+      cette page."
+    />
+
     <link rel="icon" type="image/x-icon" href="../svg/favicon.svg" />
 
     <link rel="stylesheet" href="../css/styles.css" />
